Updating README for java 11+.